--- a/src/Dex.Cap/Dex.Cap.Outbox.QuartzHandler/Dex.Cap.Outbox.AspNetScheduler.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.QuartzHandler/Dex.Cap.Outbox.AspNetScheduler.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net5.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
-		<Version>1.2.15</Version>
+		<PackageVersion>1.3.15</PackageVersion>
 	</PropertyGroup>
 
 	<!--Для NuGet-->
