--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <Nullable>enable</Nullable>
-    <Version>1.2.15</Version>
+    <PackageVersion>1.3.19</PackageVersion>
+    <PackageTags>outbox business-transaction consistency</PackageTags>
   </PropertyGroup>
 
   <!--Для NuGet-->
