--- a/src/Dex.SecurityToken/TokenRedisStorageProvider/TokenRedisStorageProvider.csproj
+++ b/src/Dex.SecurityToken/TokenRedisStorageProvider/TokenRedisStorageProvider.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>10</LangVersion>
         <RootNamespace>TokenInfoRedisStorageProvider</RootNamespace>
+        <PackageVersion>1.0.3</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
