--- a/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Ef/Dex.Cap.Outbox.Ef.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <PackageVersion>1.3.20</PackageVersion>
+    <PackageVersion>1.3.21</PackageVersion>
+    <PackageTags>outbox business-transaction consistency EF implementation</PackageTags>
   </PropertyGroup>
 
   <!--Для NuGet-->
