--- a/src/Dex.Events/Tests/Dex.Events.Distributed.Tests/Dex.Events.Distributed.Tests.csproj
+++ b/src/Dex.Events/Tests/Dex.Events.Distributed.Tests/Dex.Events.Distributed.Tests.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Dex.Cap.Outbox.Ef" Version="2.1.0" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17">
           <TreatAsUsed>true</TreatAsUsed>
         </PackageReference>
