--- a/src/Dex.Events/Dex.Events.Distributed/Dex.Events.Distributed.csproj
+++ b/src/Dex.Events/Dex.Events.Distributed/Dex.Events.Distributed.csproj
@@ -22,7 +22,9 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="Dex.MassTransit.Rabbit" Version="1.1.25" />
+      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
+      <PackageReference Include="MassTransit" Version="8.0.8" />
+      <PackageReference Include="MassTransit.Abstractions" Version="8.0.8" />
       <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     </ItemGroup>
     <!--/Для NuGet-->
