--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -4,12 +4,12 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
-		<PackageVersion>1.2.25</PackageVersion>
+		<PackageVersion>2.2.25</PackageVersion>
 	</PropertyGroup>
 
 	<!--Для NuGet-->
 	<PropertyGroup>
-		<PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.Cap</PackageProjectUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>dex team</Authors>
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
