--- a/src/Dex.MassTransit/Dex.MassTransit/Dex.MassTransit.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit/Dex.MassTransit.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
-        <Version>1.1.27</Version>
+        <Version>1.2.28</Version>
     </PropertyGroup>
 
     <!--Для NuGet-->
