--- a/src/Dex.MassTransit/Dex.MassTransit/Dex.MassTransit.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit/Dex.MassTransit.csproj
@@ -19,5 +19,8 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="Dex.Extensions" Version="1.0.11" />
+    </ItemGroup>
     <!--/Для NuGet-->
 </Project>
