--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <PackageVersion>1.2.27</PackageVersion>
+    <PackageVersion>1.3.28-Prerelease</PackageVersion>
     <LangVersion>default</LangVersion>
   </PropertyGroup>
 
@@ -29,6 +29,9 @@
   <ItemGroup>
     <Compile Remove="Neo4j\**" />
     <Compile Update="BaseOnceExecutor.cs">
+      <DependentUpon>IOnceExecutor.cs</DependentUpon>
+    </Compile>
+    <Compile Update="SimpleOnceExecutor.cs">
       <DependentUpon>IOnceExecutor.cs</DependentUpon>
     </Compile>
   </ItemGroup>
