--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Ef/Dex.Cap.OnceExecutor.Ef.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
-		<PackageVersion>2.3.27</PackageVersion>
+		<PackageVersion>2.4.29</PackageVersion>
 	</PropertyGroup>
 
 	<!--Для NuGet-->
@@ -28,6 +28,12 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Update="OnceExecutorEf.cs">
+			<DependentUpon>IOnceExecutorEntityFramework.cs</DependentUpon>
+		</Compile>
 	</ItemGroup>
 
 	<ItemGroup>
