--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -31,6 +31,9 @@
     <Compile Update="BaseOnceExecutor.cs">
       <DependentUpon>IOnceExecutor.cs</DependentUpon>
     </Compile>
+    <Compile Update="StrategyOnceExecutor.cs">
+      <DependentUpon>IStrategyOnceExecutor.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
