--- a/src/Dex.Cap/Tests/Dex.Cap.OnceExecutor.Memory.Test/Dex.Cap.OnceExecutor.Memory.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.OnceExecutor.Memory.Test/Dex.Cap.OnceExecutor.Memory.Test.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
