--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -1,67 +1,68 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <Nullable>enable</Nullable>
-    <PackageVersion>2.4.9</PackageVersion>
-    <PackageTags>outbox business-transaction consistency</PackageTags>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+        <Nullable>enable</Nullable>
+        <PackageVersion>2.5.10</PackageVersion>
+        <PackageTags>outbox business-transaction consistency</PackageTags>
+    </PropertyGroup>
 
-  <!--Для NuGet-->
-  <PropertyGroup>
-    <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.Cap</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Authors>dex team</Authors>
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.12" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
-  </ItemGroup>
-  <!--/Для NuGet-->
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.Cap</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Dex.Types" Version="1.0.26" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.12" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
+    </ItemGroup>
+    <!--/Для NuGet-->
 
-  <ItemGroup>
-    <Compile Remove="Outbox\Neo4j\**" />
-    <Compile Update="OutboxHandler.cs">
-      <DependentUpon>IOutboxHandler.cs</DependentUpon>
-    </Compile>
-    <Compile Update="OutboxService.cs">
-      <DependentUpon>IOutboxService.cs</DependentUpon>
-    </Compile>
-    <Compile Update="BaseOutboxDataProvider.cs">
-      <DependentUpon>IOutboxDataProvider.cs</DependentUpon>
-    </Compile>
-    <Compile Update="OutboxMessageHandlerFactory.cs">
-      <DependentUpon>IOutboxMessageHandlerFactory.cs</DependentUpon>
-    </Compile>
-    <Compile Update="DefaultOutboxSerializer.cs">
-      <DependentUpon>IOutboxSerializer.cs</DependentUpon>
-    </Compile>
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Outbox\Neo4j\**" />
+        <Compile Update="OutboxHandler.cs">
+            <DependentUpon>IOutboxHandler.cs</DependentUpon>
+        </Compile>
+        <Compile Update="OutboxService.cs">
+            <DependentUpon>IOutboxService.cs</DependentUpon>
+        </Compile>
+        <Compile Update="BaseOutboxDataProvider.cs">
+            <DependentUpon>IOutboxDataProvider.cs</DependentUpon>
+        </Compile>
+        <Compile Update="OutboxMessageHandlerFactory.cs">
+            <DependentUpon>IOutboxMessageHandlerFactory.cs</DependentUpon>
+        </Compile>
+        <Compile Update="DefaultOutboxSerializer.cs">
+            <DependentUpon>IOutboxSerializer.cs</DependentUpon>
+        </Compile>
+    </ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Remove="Outbox\Neo4j\**" />
-  </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Remove="Outbox\Neo4j\**" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Remove="Outbox\Neo4j\**" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Outbox\Neo4j\**" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Dex.Cap.Common.Ef\Dex.Cap.Common.Ef.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Dex.Cap.Common.Ef\Dex.Cap.Common.Ef.csproj" />
+    </ItemGroup>
 
 </Project>
