--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -4,8 +4,9 @@
         <TargetFramework>net5.0</TargetFramework>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <Nullable>enable</Nullable>
-        <PackageVersion>1.5.32</PackageVersion>
+        <PackageVersion>1.6.33</PackageVersion>
         <PackageTags>outbox business-transaction consistency</PackageTags>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -22,6 +23,7 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Dex.Types" Version="1.0.26" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     </ItemGroup>
     <!--/Для NuGet-->
