--- a/src/Dex.Cap/Tests/Dex.Cap.OnceExecutor.Memory.Test/Dex.Cap.OnceExecutor.Memory.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.OnceExecutor.Memory.Test/Dex.Cap.OnceExecutor.Memory.Test.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
         <PackageReference Include="NUnit" Version="3.14.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
@@ -23,7 +24,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.Cap.OnceExecutor.Memory\Dex.Cap.OnceExecutor.Memory.csproj" />
-      <ProjectReference Include="..\Dex.Cap.Ef.Tests\Dex.Cap.Ef.Tests.csproj" />
     </ItemGroup>
 
 </Project>
