--- a/src/Dex.Cap/Tests/Dex.Cap.OnceExecutor.Memory.Test/Dex.Cap.OnceExecutor.Memory.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.OnceExecutor.Memory.Test/Dex.Cap.OnceExecutor.Memory.Test.csproj
@@ -8,16 +8,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-        <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
-        <PackageReference Include="coverlet.collector" Version="3.1.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="NUnit" Version="3.14.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+        <PackageReference Include="NUnit.Analyzers" Version="4.2.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="coverlet.collector" Version="6.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.Cap.OnceExecutor.Memory\Dex.Cap.OnceExecutor.Memory.csproj" />
-      <ProjectReference Include="..\Dex.Cap.Ef.Tests\Dex.Cap.Ef.Tests.csproj" />
     </ItemGroup>
 
 </Project>
